--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,1 +1,13 @@
- 
+workflows:
+  remembery-app-expo-build:
+    name: Remembery Expo Build
+    max_build_duration: 60
+    environment:
+      node: 18.17.0   
+      expo: 53.0.13
+    scripts:
+      - npm install
+      - npx expo install
+      - npx expo build:android --non-interactive
+    artifacts:
+      - dist/**/*.apk
