Add first workflow

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,8 @@ workflows:
     max_build_duration: 60
     environment:
       node: 18.17.0   
-      expo: 53.0.13
+      vars:
+        EXPO_TOKEN: $EXPO_TOKEN
     scripts:
       - npm install
       - npx expo install
